--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
         const sub = async (e) => { e.preventDefault(); setLoad(true); const r = await Server.login(u, p); setLoad(false); if(r) { localStorage.setItem('authToken', r.token); onLogin(); } else alert('Erro: admin / 123'); };
         return (
           <div className="min-h-screen flex items-center justify-center bg-gray-100"><div className="bg-white p-8 rounded-xl shadow-lg w-96">
-            <h1 className="text-2xl font-bold text-center text-green-700 mb-6">TechPart ERP</h1>
+            <h1 className="text-2xl font-bold text-center text-green-700 mb-6">Catalogo IT</h1>
             <form onSubmit={sub} className="space-y-4">
               <input value={u} onChange={e=>setU(e.target.value)} className="w-full border p-2 rounded" placeholder="Usuário" />
               <input type="password" value={p} onChange={e=>setP(e.target.value)} className="w-full border p-2 rounded" placeholder="Senha" />
@@ -525,7 +525,7 @@
           </aside>
 
           <main className="flex-1 ml-0 md:ml-64 p-6 md:p-8 transition-all">
-             <div className="md:hidden mb-4 flex justify-between items-center bg-white p-4 rounded-lg shadow-sm"><span className="font-bold text-green-600">TechPart ERP</span><button onClick={logout} className="text-sm text-red-500">Sair</button></div>
+             <div className="md:hidden mb-4 flex justify-between items-center bg-white p-4 rounded-lg shadow-sm"><span className="font-bold text-green-600">Catalogo IT</span><button onClick={logout} className="text-sm text-red-500">Sair</button></div>
 
             {currentView === 'dashboard' && <Dashboard products={products} />}
             {currentView === 'products' && (
