--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
     // Preencha AQUI com os dados da sua conta (da imagem que você mandou)
     // =================================================================================
     
-    const SUPABASE_URL = 'https://zimsvitrbpdborfwujfg.supabase.co'; // Ex: https://xyzxyz.supabase.co
-    const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InppbXN2aXRyYnBkYm9yZnd1amZnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ3OTk4MDksImV4cCI6MjA4MDM3NTgwOX0.xxSYJUFxUtAZMbZ_aq0c-muZglov-W4X3oaJO4fTFSM'; // Ex: eyJh... (A chave grande da imagem)
+    const SUPABASE_URL = 'https://engvsccurmvttkerpqbs.supabase.co'; // Ex: https://xyzxyz.supabase.co
+    const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImVuZ3ZzY2N1cm12dHRrZXJwcWJzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ4MTA3NjgsImV4cCI6MjA4MDM4Njc2OH0.EzDuXmFcYavKxPD5xBCT46IRaLcxQfnJ9_C9pXxwLhc'; // Ex: eyJh... (A chave grande da imagem)
 
     // Inicializa o Cliente do Banco de Dados
     // Se as chaves estiverem vazias, o sistema não vai rodar.
     let supabase = null;
     try {
-        if (SUPABASE_URL !== 'COLE_SUA_URL_DO_PROJETO_AQUI' && window.supabase) {
+        if (SUPABASE_URL !== 'https://engvsccurmvttkerpqbs.supabase.co' && window.supabase) {
             supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
         } else {
             console.warn("⚠️ ATENÇÃO: Supabase não configurado. O sistema vai rodar, mas não vai salvar dados.");
@@ -584,3 +584,4 @@
   </script>
 </body>
 </html>
+
