--- a/index.html
+++ b/index.html
@@ -275,6 +275,30 @@
           onImport(parsed); onClose(); setJsonText(''); setError('');
         } catch (e) { setError("Erro no JSON: " + e.message); }
       };
+
+      const ORDEM_ESPECS = [
+        "sku",
+        "marca",
+        "modelo",
+        "voltagem",
+        "capacidade",
+        "celulas",
+        "mah",
+        "wh",
+        "amperagem",
+        "potencia",
+        "idioma",
+        "moldura",
+        "backlight",
+        "tipo",
+        "cor",
+        "tamanho",
+        "resolucao",
+        "iluminacao",
+        "conector",
+        "fixacao",
+        "acabamento"
+      ];
       return (
         <div className="fixed inset-0 z-50 flex items-center justify-center p-4 bg-black/60 backdrop-blur-sm" onClick={onClose}>
           <div className="bg-white rounded-lg shadow-xl w-full max-w-2xl overflow-hidden flex flex-col" onClick={e => e.stopPropagation()}>
@@ -351,7 +375,7 @@
                   <div>
                     <h3 className="text-lg font-bold text-gray-900 mb-3 border-b pb-2">Especificações Técnicas</h3>
                     <div className="rounded-lg border border-gray-100 overflow-hidden text-sm shadow-sm">
-                      {product.especificacoes && Object.entries(product.especificacoes).map(([key, value], index) => (
+                      {product.especificacoes && ORDEM_ESPECS.filter(k => product.especificacoes[k]).map((key, index) => => (
                       <div key={key} className={`flex justify-between py-3 px-4 ${index % 2 === 0 ? 'bg-gray-50' : 'bg-white'}`}>
                         <span className="font-bold text-gray-600 capitalize">{key.replace(/_/g, ' ')}:</span>
                         <span className="text-gray-800 text-right ml-4 font-medium">{value}</span>
@@ -850,5 +874,6 @@
   </script>
 </body>
 </html>
+
 
 
