--- a/index.html
+++ b/index.html
@@ -275,30 +275,6 @@
           onImport(parsed); onClose(); setJsonText(''); setError('');
         } catch (e) { setError("Erro no JSON: " + e.message); }
       };
-
-      const ORDEM_ESPECS = [
-        "sku",
-        "marca",
-        "modelo",
-        "voltagem",
-        "capacidade",
-        "celulas",
-        "mah",
-        "wh",
-        "amperagem",
-        "potencia",
-        "idioma",
-        "moldura",
-        "backlight",
-        "tipo",
-        "cor",
-        "tamanho",
-        "resolucao",
-        "iluminacao",
-        "conector",
-        "fixacao",
-        "acabamento"
-      ];
       return (
         <div className="fixed inset-0 z-50 flex items-center justify-center p-4 bg-black/60 backdrop-blur-sm" onClick={onClose}>
           <div className="bg-white rounded-lg shadow-xl w-full max-w-2xl overflow-hidden flex flex-col" onClick={e => e.stopPropagation()}>
@@ -313,6 +289,29 @@
       );
     };
 
+    const ORDEM_ESPECS = [
+      "sku",
+      "marca",
+      "modelo",
+      "voltagem",
+      "capacidade",
+      "celulas",
+      "mah",
+      "wh",
+      "amperagem",
+      "potencia",
+      "idioma",
+      "moldura",
+      "backlight",
+      "tipo",
+      "cor",
+      "tamanho",
+      "resolucao",
+      "iluminacao",
+      "conector",
+      "fixacao",
+      "acabamento"
+    ];
     const ProductModal = ({ product, onClose }) => {
       if (!product) return null;
       
@@ -375,12 +374,21 @@
                   <div>
                     <h3 className="text-lg font-bold text-gray-900 mb-3 border-b pb-2">Especificações Técnicas</h3>
                     <div className="rounded-lg border border-gray-100 overflow-hidden text-sm shadow-sm">
-                      {product.especificacoes && ORDEM_ESPECS.filter(k => product.especificacoes[k]).map((key, index) => => (
-                      <div key={key} className={`flex justify-between py-3 px-4 ${index % 2 === 0 ? 'bg-gray-50' : 'bg-white'}`}>
-                        <span className="font-bold text-gray-600 capitalize">{key.replace(/_/g, ' ')}:</span>
-                        <span className="text-gray-800 text-right ml-4 font-medium">{value}</span>
-                      </div>
-                    ))}
+                      product.especificacoes &&
+                      ORDEM_ESPECS.filter(key => product.especificacoes[key]).map((key, index) => (
+                        <div
+                          key={key}
+                          className={`flex justify-between py-3 px-4 ${index % 2 === 0 ? 'bg-gray-50' : 'bg-white'}`}
+                        >
+                          <span className="font-bold text-gray-600 capitalize">
+                            {key.replace(/_/g, ' ')}:
+                          </span>
+                          <span className="text-gray-800 text-right ml-4 font-medium">
+                            {product.especificacoes[key]}
+                          </span>
+                        </div>
+                      ))
+                    }
 
 
                       {(!product.especificacoes || Object.keys(product.especificacoes).length === 0) && (
@@ -874,6 +882,7 @@
   </script>
 </body>
 </html>
+
 
 
 
