--- a/index.html
+++ b/index.html
@@ -73,9 +73,18 @@
       "backlight",
       "tamanho",
       "resolucao",
-      "iluminacao",
+      "iluminação",
       "conector",
-      "fixacao",
+      "fixação",
+      "pn",
+      "resolução",
+      "tipo de conector",
+      "posição do conector",
+      "largura",
+      "tecnologia",
+      "touchscreen",
+      "frequencia hz",
+      "pcb",
       "acabamento"
     ];
 
@@ -87,7 +96,7 @@
     };
 
     const FILTERS_CONFIG = {
-        [Category.SCREEN]: ['tamanho', 'resolucao', 'iluminacao', 'conector', 'fixacao', 'acabamento'],
+        [Category.SCREEN]: ['Tamanho', 'Resolução', 'iluminação', 'Conector', 'Fixação', 'Acabamento','Tipo de conector','Posição do conector','Largura','Tecnologia','Touchscreen', 'Frequencia hz', 'Pcb'],
         [Category.BATTERY]: ['voltagem', 'capacidade', 'cor', 'tipo'],
         [Category.KEYBOARD]: ['cor', 'idioma', 'moldura', 'backlight', 'marca'],
         [Category.POWER_SUPPLY]: ['voltagem', 'amperagem', 'potencia', 'conector']
@@ -793,3 +802,4 @@
   </script>
 </body>
 </html>
+
