teste de filtro

--- a/index.html
+++ b/index.html
@@ -486,6 +486,8 @@
                     <InputField label="Conector" name="conector" value={form.conector} onChange={handleChange} />
                     <SelectField label="Fixação" name="fixacao" options={['Abas', 'Sem Fixação']} value={form.fixacao} onChange={handleChange} />
                     <SelectField label="Acabamento" name="acabamento" options={['Brilhante', 'Fosco']} value={form.acabamento} onChange={handleChange} />
+                    <InputField label="pcb" name="pcb" required value={form.pcb} onChange={handleChange} />
+                    <InputField label="tecnologia" name="tecnologia" required value={form.tecnologia} onChange={handleChange} />
                 </>
             );
         }
@@ -802,4 +804,5 @@
   </script>
 </body>
 </html>
+
 
