--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       "idioma",
       "moldura",
       "backlight",
-      "tamanho",
+      "Tamanho",
       "resolucao",
       "iluminação",
       "conector",
@@ -96,7 +96,7 @@
     };
 
     const FILTERS_CONFIG = {
-        [Category.SCREEN]: ['Tamanho', 'Resolução', 'iluminação', 'Conector', 'Fixação', 'Acabamento','Tipo de conector','Posição do conector','Largura','Tecnologia','Touchscreen', 'Frequencia hz', 'Pcb'],
+        [Category.SCREEN]: ['tamanho', 'Resolução', 'iluminação', 'Conector', 'Fixação', 'Acabamento','Tipo de conector','Posição do conector','Largura','Tecnologia','Touchscreen', 'Frequencia hz', 'Pcb'],
         [Category.BATTERY]: ['voltagem', 'capacidade', 'cor', 'tipo'],
         [Category.KEYBOARD]: ['cor', 'idioma', 'moldura', 'backlight', 'marca'],
         [Category.POWER_SUPPLY]: ['voltagem', 'amperagem', 'potencia', 'conector']
@@ -480,7 +480,7 @@
                 <>
                     <InputField label="SKU" name="sku" required value={form.sku} onChange={handleChange} />
                     <InputField label="Marca" name="marca" required value={form.marca} onChange={handleChange} />
-                    <InputField label="Tamanho" name="tamanho" value={form.tamanho} onChange={handleChange} />
+                    <InputField label="Tamanho" name="Tamanho" value={form.Tamanho} onChange={handleChange} />
                     <InputField label="Resolução" name="resolucao" value={form.resolucao} onChange={handleChange} />
                     <SelectField label="Iluminação" name="iluminacao" options={['LED', 'CCFL', 'OLED']} value={form.iluminacao} onChange={handleChange} />
                     <InputField label="Conector" name="conector" value={form.conector} onChange={handleChange} />
@@ -804,5 +804,6 @@
   </script>
 </body>
 </html>
+
 
 
