Update print statement from 'Hello' to 'Goodbye'tela

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                     <InputField label="Conector" name="conector" value={form.conector} onChange={handleChange} />
                 </>
             );
-          default: // Tela
+          default: 'Tela':
             return (
                 <>
                     <InputField label="SKU" name="sku" required value={form.sku} onChange={handleChange} />
@@ -804,6 +804,7 @@
   </script>
 </body>
 </html>
+
 
 
 
