--- a/index.html
+++ b/index.html
@@ -73,13 +73,12 @@
       "backlight",
       "Tamanho",
       "resolucao",
-      "iluminação",
+      "iluminacao",
       "conector",
       "fixação",
       "pn",
-      "resolução",
       "tipo de conector",
-      "posição do conector",
+      "posicao do conector",
       "largura",
       "tecnologia",
       "touchscreen",
@@ -804,6 +803,7 @@
   </script>
 </body>
 </html>
+
 
 
 
