--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       "resolucao",
       "iluminacao",
       "conector",
-      "fixação",
+      "fixacao",
       "pn",
       "tipo de conector",
       "posicao do conector",
@@ -802,6 +802,7 @@
   </script>
 </body>
 </html>
+
 
 
 
