--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                     <InputField label="Conector" name="conector" value={form.conector} onChange={handleChange} />
                     <SelectField label="Fixação" name="fixacao" options={['Abas', 'Sem Fixação']} value={form.fixacao} onChange={handleChange} />
                     <SelectField label="Acabamento" name="acabamento" options={['Brilhante', 'Fosco']} value={form.acabamento} onChange={handleChange} />
-                    <InputField label="PCB" name="pcb" required value={form.pcb} onChange={handleChange} />
+                    <SelectField label="Tamanho" name="tamanho" value={form.acabamento} onChange={handleChange} />
                 </>
             );
         }
@@ -802,6 +802,7 @@
   </script>
 </body>
 </html>
+
 
 
 
