--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     };
 
     const FILTERS_CONFIG = {
-        [Category.SCREEN]: ['tamanho', 'Resolução', 'iluminação', 'Conector', 'Fixação', 'Acabamento','Tipo de conector','Posição do conector','Largura','Tecnologia','Touchscreen', 'Frequencia hz', 'Pcb'],
+        [Category.SCREEN]: ['tamanho', 'resolucao', 'iluminacao', 'conector', 'fixacao', 'acabamento','tipo de conector','posição do conector','largura','tecnologia','touchscreen', 'frequencia hz', 'pcb'],
         [Category.BATTERY]: ['voltagem', 'capacidade', 'cor', 'tipo'],
         [Category.KEYBOARD]: ['cor', 'idioma', 'moldura', 'backlight', 'marca'],
         [Category.POWER_SUPPLY]: ['voltagem', 'amperagem', 'potencia', 'conector']
@@ -802,6 +802,7 @@
   </script>
 </body>
 </html>
+
 
 
 
