--- a/index.html
+++ b/index.html
@@ -481,6 +481,11 @@
                     <InputField label="Marca" name="marca" required value={form.marca} onChange={handleChange} />
                     <InputField label="Conector" name="conector" value={form.conector} onChange={handleChange} />
                     <SelectField label="Acabamento" name="acabamento" options={['Brilhante', 'Fosco']} value={form.acabamento} onChange={handleChange} />
+                    <InputField label="Tamanho" name="tamanho" required value={form.tamanho} onChange={handleChange} />
+                    <InputField label="Pn" name="pn" required value={form.pn} onChange={handleChange} />
+                    <InputField label="Posição do conector" name="posicao do conector" required value={form.posicao do conector} onChange={handleChange} />
+                    <InputField label="Tecnologia" name="tecnologia" required value={form.tecnologia} onChange={handleChange} />
+                    
                     
                 </>
             );
@@ -798,6 +803,7 @@
   </script>
 </body>
 </html>
+
 
 
 
