--- a/index.html
+++ b/index.html
@@ -480,6 +480,7 @@
                     <InputField label="SKU" name="sku" required value={form.sku} onChange={handleChange} />
                     <InputField label="Marca" name="marca" required value={form.marca} onChange={handleChange} />
                     <InputField label="Conector" name="conector" value={form.conector} onChange={handleChange} />
+                    <InputField label="Tamanho" name="tamanho" required value={form.tamanho} onChange={handleChange} />
                     <SelectField label="Acabamento" name="acabamento" options={['Brilhante', 'Fosco']} value={form.acabamento} onChange={handleChange} />
                     
                 </>
@@ -798,6 +799,7 @@
   </script>
 </body>
 </html>
+
 
 
 
