--- a/index.html
+++ b/index.html
@@ -481,6 +481,7 @@
                     <InputField label="Marca" name="marca" required value={form.marca} onChange={handleChange} />
                     <InputField label="Conector" name="conector" value={form.conector} onChange={handleChange} />
                     <InputField label="Tamanho" name="tamanho" required value={form.tamanho} onChange={handleChange} />
+                    <InputField label="Resolução" name="resolucao" required value={form.resolucao} onChange={handleChange} />
                     <SelectField label="Acabamento" name="acabamento" options={['Brilhante', 'Fosco']} value={form.acabamento} onChange={handleChange} />
                     
                 </>
@@ -799,6 +800,7 @@
   </script>
 </body>
 </html>
+
 
 
 
